--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,9 @@
         <item name="android:textColor">#6750A4</item>
         <item name="rippleColor">#6750A4</item>
     </style>
+
+    <style name="Chip.Choice" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="colorOnSurface">#666666</item>
+    </style>
+
 </resources>
