--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimaryVariant">?colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="android:textColorPrimary">?colorOnPrimary</item>
+        <item name="colorSurface">@color/grey_light</item>
+        <item name="colorOnSurface">@color/black</item>
 
         <item name="android:windowBackground">?colorPrimary</item>
         <item name="colorOnBackground">?colorOnPrimary</item>
