--- a/app/src/main/res/layout/fragment_notes_list.xml
+++ b/app/src/main/res/layout/fragment_notes_list.xml
@@ -53,11 +53,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:backgroundTint="?colorOnPrimary"
             android:contentDescription="@string/add_note"
             android:src="@drawable/ic_add"
+            app:backgroundTint="?colorSurface"
             app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="?colorOnSurface" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
