--- a/app/src/main/res/layout/page_onboarding_first.xml
+++ b/app/src/main/res/layout/page_onboarding_first.xml
@@ -22,12 +22,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/white"
             android:clickable="false"
             android:focusable="false"
             android:src="@drawable/ic_add"
+            app:backgroundTint="?colorSurface"
+            app:borderWidth="0dp"
             app:layout_constraintBottom_toBottomOf="@id/onboardingFirstFabBackground"
             app:layout_constraintEnd_toEndOf="@id/onboardingFirstFabBackground"
+            app:tint="?colorOnSurface"
             tools:ignore="ContentDescription" />
 
         <TextView
