--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:textColorPrimary">?colorOnPrimary</item>
         <item name="colorSurface">@color/grey_light</item>
         <item name="colorOnSurface">@color/black</item>
+        <item name="colorControlNormal">@color/purple</item>
 
         <item name="android:windowBackground">?colorPrimary</item>
         <item name="colorOnBackground">?colorOnPrimary</item>
